; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_player_set_subtitle_delay.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_player_set_subtitle_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_PLAYER_WHENCE_ABSOLUTE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_player_set_subtitle_delay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_player_set_subtitle_delay(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @vlclua_get_player_internal(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call double @luaL_checknumber(i32* %8, i32 1)
  store double %9, double* %4, align 8
  %10 = load double, double* %4, align 8
  %11 = call i32 @vlc_tick_from_sec(double %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @vlc_player_Lock(i32* %12)
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @VLC_PLAYER_WHENCE_ABSOLUTE, align 4
  %17 = call i32 @vlc_player_SetSubtitleDelay(i32* %14, i32 %15, i32 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @vlc_player_Unlock(i32* %18)
  ret i32 0
}

declare dso_local i32* @vlclua_get_player_internal(i32*) #1

declare dso_local double @luaL_checknumber(i32*, i32) #1

declare dso_local i32 @vlc_tick_from_sec(double) #1

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local i32 @vlc_player_SetSubtitleDelay(i32*, i32, i32) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
